navbar on mobile is now fixed

--- a/src/css/FamilyHome.css
+++ b/src/css/FamilyHome.css
@@ -115,10 +115,6 @@ h1 {
 
 
 /* Ensure the header takes full width */
-.navbar {
-    width: 100%;
-    background-color: #222; /* Set your navbar background color here */
-}
 
 .nav-container {
     display: flex;
